test/CMakeLists.txt - fix review comment: use add_compile_options("-fno-fast-math") instead of set (CMAKE_CXX_FLAGS "-fno-fast-math ${CMAKE_CXX_FLAGS}")

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,7 +18,7 @@ set (ranlux_24_48_test.pass_timeout_release "720") # 12min
 # disable fast math for ALL TESTS
 check_cxx_compiler_flag("-fno-fast-math" _fno_fast_math_option)
 if (_fno_fast_math_option)
-    set (CMAKE_CXX_FLAGS "-fno-fast-math ${CMAKE_CXX_FLAGS}")
+    add_compile_options("-fno-fast-math")
 else()
     message(STATUS "oneDPL: -fno-fast-math is not supported by current compiler")
 endif()
