--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,10 +82,11 @@ jobs:
           path: gh-pages
       - name: Set env
         run: echo GITHUB_SHA_SHORT=${GITHUB_SHA::8} >> $GITHUB_ENV
-      - name: Download documetation
+      - name: Download documentation
         uses: actions/download-artifact@v2
         with:
           name: onedpl-html-docs-${{ env.GITHUB_SHA_SHORT }}
+          path: html
       - name: Publish to github pages
         run: |
           cd gh-pages
